--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -11,7 +11,8 @@
 
   <p>
     <%= link_to 'Show', artcle_path(article) %> |
-    <%= link_to 'Edit', edit_article_path(article) %>
+    <%= link_to 'Edit', edit_article_path(article) %> |
+    <%= link_to 'Destroy', article_path(article), method: :delete %>
   </p>
 
   <hr>
