--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,3 +2,19 @@
 <p>
   <%= @article.text %>
 </p>
+
+<%= form_for([@article, @article.comments.build]) do |f| %>
+  <p>
+    <%= f.label :autor %>
+    <%= f.text_field :autor %>
+  </p>
+
+  <p>
+    <%= f.label :body %>
+    <%= f.text_area :body %>
+  </p>
+
+  <p>
+    <%= f.submit %>
+  </p>
+<% end %>
